--- a/recipes/templates/recipes/landing_page.html
+++ b/recipes/templates/recipes/landing_page.html
@@ -1,32 +1,11 @@
-{% load static %}
+{% extends 'recipes/base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cook Book</title>
-
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="{% static "recipes/materialize/css/materialize.css" %}"
-          media="screen,projection"/>
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
-<body>
-
-<nav>
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-    </div>
-</nav>
+{% block body %}
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large red" href="{% url 'recipes:Create Recipe' %}">
+    <i class="large material-icons">add</i>
+  </a>
+</div>
 
 <div class="container">
     <table>
@@ -37,19 +16,14 @@
         </thead>
 
         <tbody>
-        <tr>
-            <td>Stiry Fry W/ Burgers</td>
-        </tr>
-        <tr>
-            <td>Pork Chops</td>
-        </tr>
-        <tr>
-            <td>Toast</td>
-        </tr>
+        {% for recipe in recipes %}
+            <tr>
+                <td>
+                    <a href="#_">{{ recipe.name }}</a>
+                </td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
-
-<script type="text/javascript" src="{% static "recipes/materialize/js/materialize.min.js" %}"></script>
-</body>
-</html>
+{% endblock body %}
