--- a/recipes/templates/recipes/landing_page.html
+++ b/recipes/templates/recipes/landing_page.html
@@ -11,7 +11,7 @@
     <table>
         <thead>
         <tr>
-            <th>Recipe</th>
+            <th>Recipes</th>
         </tr>
         </thead>
 
@@ -19,7 +19,7 @@
         {% for recipe in recipes %}
             <tr>
                 <td>
-                    <a href="#_">{{ recipe.name }}</a>
+                    <a href="{% url  'recipes:Recipe Details' recipe.id%}">{{ recipe.name }}</a>
                 </td>
             </tr>
         {% endfor %}
