--- a/recipes/templates/recipes/create_recipe.html
+++ b/recipes/templates/recipes/create_recipe.html
@@ -2,6 +2,10 @@
 
 {% block body %}
     <div class="container">
-        {{ form.as_p }}
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit">
+        </form>
     </div>
 {% endblock body %}
