WIP.. improving details layout

--- a/recipes/templates/recipes/recipe_details.html
+++ b/recipes/templates/recipes/recipe_details.html
@@ -4,4 +4,9 @@
     <div class="container">
         {{ form }}
     </div>
+
+    {% for ingredient in ingredients %}
+        *{{ ingredient }}
+        <br/>
+    {% endfor %}
 {% endblock body %}
