Added config.ini; Updated details page.

--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -22,7 +22,7 @@
     <div class="nav-wrapper">
         <a href="/" class="brand-logo center">Cookbook</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-{#            <li><a href="#_">Add Recipe</a></li>#}
+            <li><a href="{% url 'admin:index' %}">admin</a></li>
         </ul>
     </div>
 </nav>
