--- a/recipes/templates/recipes/recipe_details.html
+++ b/recipes/templates/recipes/recipe_details.html
@@ -10,8 +10,8 @@
         {% endfor %}
     </ul>
     <h4>Method</h4>
-    {% for ingredient in ingredients %}
-            {{ forloop.counter }}. {{ ingredient }}
+    {% for instruction in method %}
+            {{ forloop.counter }}. {{ instruction }}
             <br/>
         {% endfor %}
     </div>
