--- a/recipes/templates/recipes/recipe_details.html
+++ b/recipes/templates/recipes/recipe_details.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <h2 style="text-align: center">{{ form.name.value }}</h2>
+        <h2 style="text-align: center">{{ name }}</h2>
         <h4>Ingredients</h4>
     <ul class="collection">
         {% for ingredient in ingredients %}
