--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -8,8 +8,8 @@
 
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="{% static "recipes/materialize/css/materialize.css" %}"
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
               media="screen,projection"/>
 
         <!--Let browser know website is optimized for mobile-->
@@ -30,6 +30,7 @@
         {% block body %}
         {% endblock body %}
 
-        <script type="text/javascript" src="{% static "recipes/materialize/js/materialize.min.js" %}"></script>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
