--- a/templates/default/base.html
+++ b/templates/default/base.html
@@ -5,20 +5,24 @@
 <html lang="en">
 {% block authAppHeader %}
 
-<head>
-    <title>
-        Parametricall
-    </title>
-<!--Import Google Icon Font-->
+    <head>
+        <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <meta charset="UTF-8">
 
-    {% block head %}
-    {% endblock head %}
-</head>
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<body>
+        {% block head %}
+            <title>
+                Parametricall
+            </title>
+        {% endblock head %}
+    </head>
+
+    <body>
 
     {% block body_header %}
     {% endblock body_header %}
@@ -26,41 +30,12 @@
     {% block body %}
     {% endblock body %}
 
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-<!-- Compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    {% block scripts %}
+    {% endblock scripts %}
 
-{% block scripts %}
-{% endblock scripts %}
-
-</body>
+    </body>
 {% endblock authAppHeader %}
 </html>
-
-
-{#<body>#}
-{#<header>#}
-{#    <nav>#}
-{#        <div class="nav-wrapper">#}
-{#            <a href="/" class="brand-logo center">auth</a>#}
-{#            <ul id="nav-mobile" class="right hide-on-med-and-down">#}
-{#                {% if user.is_authenticated %}#}
-{#                    <li><a href="{% url 'auth:profile' user.id %}">{{ user.username }}</a></li>#}
-{#                    <li><a href="{% url 'auth:create' %}">Create</a></li>#}
-{#                    <li><a href="{% url 'auth:users' %}">Table</a></li>#}
-{#                    <li><a href="{% url 'auth:logout' %}">Logout</a></li>#}
-{#                {% else %}#}
-{#                    <li><a href="{% url 'auth:login' %}">Login</a></li>#}
-{#                {% endif %}#}
-{#            </ul>#}
-{#        </div>#}
-{#    </nav>#}
-{#</header>#}
-{##}
-{#{% block content %}#}
-{#{% endblock content %}#}
-{##}
-{#<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>#}
-{##}
-{#</body>#}
-{#</html>#}
