--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -1,33 +1,22 @@
+{% extends "default/base_with_header.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Cookbook</title>
+{% block head %}
+    <title>Cookbook</title>
+    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+{% endblock head %}
 
-        <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!-- Compiled and minified CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-              media="screen,projection"/>
+{% block body_header %}
+    <nav>
+        <div class="nav-wrapper">
+            <a href="/" class="brand-logo center">Cookbook</a>
+        </div>
+    </nav>
+{% endblock body_header %}
 
-        <!--Let browser know website is optimized for mobile-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        {% block body_header %}
-            <nav>
-                <div class="nav-wrapper">
-                    <a href="/" class="brand-logo center">Cookbook</a>
-                </div>
-            </nav>
-        {% endblock body_header %}
+{% block body %}
+{% endblock body %}
 
-        {% block body %}
-        {% endblock body %}
 
-        <!-- Compiled and minified JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    </body>
-</html>
+{% block scripts %}
+{% endblock scripts %}
