--- a/templates/default/base_with_header.html
+++ b/templates/default/base_with_header.html
@@ -4,6 +4,9 @@
     <nav>
         <div class="nav-wrapper">
             <a href="/" class="brand-logo center">CookBook</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="{% url 'admin:index' %}">admin</a></li>
+            </ul>
         </div>
     </nav>
 {% endblock body_header %}
