Can edit recipes. Edit recpe page is react generated.

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -17,4 +17,7 @@
     {% else %}
         <script src="{% static "assets/prod/main.js" %}"></script>
     {% endif %}
+
+    {% block sub-body %}
+    {% endblock sub-body %}
 {% endblock body %}
