--- a/recipes/templates/recipes/create_recipe.html
+++ b/recipes/templates/recipes/create_recipe.html
@@ -6,7 +6,9 @@
         (function () {
             Cookbook.FormSelector(
                 appName = "CreateRecipeForm",
-                data = "{{ test }}"
+                data = {
+                    "csrf_token": "{{ csrf_token }}"
+                }
             );
         })();
     </script>
