--- a/recipes/templates/recipes/recipe_details.html
+++ b/recipes/templates/recipes/recipe_details.html
@@ -10,6 +10,7 @@
                     "recipeName": "{{recipeName}}",
                     "ingredients": JSON.parse({{ ingredients| safe}}),
                     "method": JSON.parse({{ method| safe}}),
+                    "photo_url": "{{ photo_url }}",
                     "csrf_token": "{{ csrf_token }}"
                 }
             );
