--- a/templates/default/base.html
+++ b/templates/default/base.html
@@ -22,7 +22,7 @@
         {% endblock head %}
     </head>
 
-    <body>
+    <body style="background-color: lightgrey">
 
     {% block body_header %}
     {% endblock body_header %}
