--- a/templates/default/base_with_header.html
+++ b/templates/default/base_with_header.html
@@ -1,7 +1,7 @@
 {% extends 'default/base.html' %}
 
 {% block body_header %}
-    <nav>
+    <nav class="white">
         <div class="nav-wrapper">
             <a href="/" class="brand-logo center">CookBook</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
